# aspect

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: launch.json
.github/workflows/: release.yml
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Browser.tsx  ContextMenu.tsx  Convert.tsx  Dropdown.tsx  ExportModal.tsx  FilterMenu.tsx  Grid.tsx  Home.tsx  Sidebar.tsx  Viewer.tsx
src/lib/: api.ts  icons.tsx  store.ts  util.ts
