[package]
name = "aspect"
version = "0.1.0"
description = "Aspect - a fast photo culling app by Meridian"
authors = ["Meridian Development Studios"]
edition = "2021"

[lib]
# The `_lib` suffix keeps the lib name unique from the bin name (needed on Windows,
# see https://github.com/rust-lang/cargo/issues/8519).
name = "aspect_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
tauri-plugin-dialog = "2.7.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
image = "0.25"
sysinfo = "0.33"
dirs = "5"
urlencoding = "2"
kamadak-exif = "0.5"
